@@ -3,9 +3,10 @@ package CHI::Driver::DBI;
 use strict;
 use warnings;
 
-use DBIx::Connector;
+use d;
 use DBI::Const::GetInfoType;
 use Moose;
+use Moose::Util::TypeConstraints;
 use Carp qw(croak);
 
 our $VERSION = '1.22';
@@ -13,6 +14,25 @@ our $VERSION = '1.22';
 # TODO:  For pg see "upsert" - http://www.postgresql.org/docs/current/static/plpgsql-control-structures.html#PLPGSQL-UPSERT-EXAMPLE
 
 extends 'CHI::Driver';
+
+# my $handle_type = subtype as 'Coderef';
+# my $dbixconnector_type = subtype as 'DBIx::Connector';
+# my $dbi_type = subtype as 'DBI::db';
+
+my $type = "CHI::Driver::DBI";
+
+subtype "$type.DBIHandleGenerator" => as 'CodeRef';
+subtype "$type.DBIXConnector"      => as 'DBIx::Connector';
+subtype "$type.DBIHandle"          => as 'DBI::db';
+
+coerce "$type.DBIHandleGenerator" => from "$type.DBIXConnector" => via {
+    my $dbixconn = $_;
+    sub { $dbixconn->dbh }
+};
+coerce "$type.DBIHandleGenerator" => from "$type.DBIHandle" => via {
+    my $dbh = $_;
+    sub { $dbh }
+};
 
 =head1 NAME
 
@@ -22,10 +42,17 @@ CHI::Driver::DBI - Use DBI for cache storage
 
  use CHI;
 
- my $dbh   = DBI->connect(...);
- my $cache = CHI->new( driver => 'DBI', dbh => $dbh, );
- OR
- my $cache = CHI->new( driver => 'DBI', dbh => $dbh, dbh_ro => $dbh_ro, );
+ # Supply a DBI handle
+ #
+ my $cache = CHI->new( driver => 'DBI', dbh => DBI->connect(...) );
+
+ # or a DBIx::Connector
+ #
+ my $cache = CHI->new( driver => 'DBI', dbh => DBIx::Connector->new(...) );
+
+ # or code that generates a DBI handle
+ #
+ my $cache = CHI->new( driver => 'DBI', dbh => sub { ...; return $dbh } );
 
 =head1 DESCRIPTION
 
@@ -64,15 +91,33 @@ has 'table_prefix' => ( is => 'rw', isa => 'Str', default => 'chi_', );
 The main, or rw, DBI handle used to communicate with the db. If a dbh_ro handle
 is defined then this handle will only be used for writing.
 
-This attribute can be set after object creation as well, so in a persistent
-environment like mod_perl or FastCGI you may keep an instance of the cache
-around and set the dbh on each request after checking it with ping().
+You may pass this handle, and dbh_ro below, in one of three forms:
+
+=over
+
+=item *
+
+a regular DBI handle
+
+=item *
+
+a L<DBIx::Connector|DBIx::Connector> object
+
+=item *
+
+a code reference that will be called each time and is expected to return a DBI
+handle, e.g.
+
+    sub { My::Rose::DB->new->dbh }
+
+=back
+
+The last two options are valuable if your CHI object is going to live for
+enough time that a single DBI handle might time out, etc.
 
 =cut
 
-has 'db_conn' => ( is => 'ro', isa => 'DBIx::Connector' );
-
-sub dbh { $_[0]->{_dbh} || $_[0]->db_conn->dbh }
+has 'dbh' => ( is => 'ro', isa => "$type.DBIHandleGenerator", coerce => 1 );
 
 =item dbh_ro
 
@@ -81,11 +126,12 @@ master/slave RDBMS setups.
 
 =cut
 
-has 'db_conn_ro' => ( is => 'ro', isa => 'DBIx::Connector', predicate => 'has_db_conn_ro' );
-
-sub has_dbh_ro { exists $_[0]->{_dbh_ro} || $_[0]->has_db_conn_ro }
-sub dbh_ro     { $_[0]->{_dbh_ro} || $_[0]->db_conn_ro->dbh }
-
+has 'dbh_ro' => (
+    is        => 'ro',
+    isa       => "$type.DBIHandleGenerator",
+    predicate => 'has_dbh_ro',
+    coerce    => 1,
+);
 
 =item sql_strings
 
@@ -114,21 +160,15 @@ exists..." so it's generally harmless.
 =cut
 
 sub BUILD {
-    my ( $self, $args, ) = @_;
+    my ( $self, $args ) = @_;
 
-    if ( exists $args->{dbh} ) {
-        $self->{_dbh} = $args->{dbh};
-    }
-
-    if ( exists $args->{dbh_ro} ) {
-        $self->{_dbh_ro} = $args->{dbh_ro};
-    }
+    my $dbh = $self->dbh->();
 
     $self->sql_strings;
 
     if ( $args->{create_table} ) {
-        $self->dbh->do( $self->sql_strings->{create} )
-          or croak $self->dbh->errstr;
+        $dbh->do( $self->sql_strings->{create} )
+          or croak $dbh->errstr;
     }
 
     return;
@@ -143,10 +183,11 @@ sub _table {
 sub _build_sql_strings {
     my ( $self, ) = @_;
 
-    my $table   = $self->dbh->quote_identifier( $self->_table );
-    my $value   = $self->dbh->quote_identifier('value');
-    my $key     = $self->dbh->quote_identifier('key');
-    my $db_name = $self->dbh->get_info( $GetInfoType{SQL_DBMS_NAME} );
+    my $dbh     = $self->dbh->();
+    my $table   = $dbh->quote_identifier( $self->_table );
+    my $value   = $dbh->quote_identifier('value');
+    my $key     = $dbh->quote_identifier('key');
+    my $db_name = $dbh->get_info( $GetInfoType{SQL_DBMS_NAME} );
 
     my $strings = {
         fetch    => "SELECT $value FROM $table WHERE $key = ?",
@@ -186,7 +227,7 @@ sub _build_sql_strings {
 sub fetch {
     my ( $self, $key, ) = @_;
 
-    my $dbh = $self->has_dbh_ro ? $self->dbh_ro : $self->dbh;
+    my $dbh = $self->has_dbh_ro ? $self->dbh_ro->() : $self->dbh->();
     my $sth = $dbh->prepare_cached( $self->sql_strings->{fetch} )
       or croak $dbh->errstr;
     $sth->execute($key) or croak $sth->errstr;
@@ -202,12 +243,12 @@ sub fetch {
 sub store {
     my ( $self, $key, $data, ) = @_;
 
-    my $sth = $self->dbh->prepare_cached( $self->sql_strings->{store} );
+    my $dbh = $self->dbh->();
+    my $sth = $dbh->prepare_cached( $self->sql_strings->{store} );
     if ( not $sth->execute( $key, $data ) ) {
         if ( $self->sql_strings->{store2} ) {
-            my $sth =
-              $self->dbh->prepare_cached( $self->sql_strings->{store2} )
-              or croak $self->dbh->errstr;
+            my $sth = $dbh->prepare_cached( $self->sql_strings->{store2} )
+              or croak $dbh->errstr;
             $sth->execute( $data, $key )
               or croak $sth->errstr;
         }
@@ -227,8 +268,9 @@ sub store {
 sub remove {
     my ( $self, $key, ) = @_;
 
-    my $sth = $self->dbh->prepare_cached( $self->sql_strings->{remove} )
-      or croak $self->dbh->errstr;
+    my $dbh = $self->dbh->();
+    my $sth = $dbh->prepare_cached( $self->sql_strings->{remove} )
+      or croak $dbh->errstr;
     $sth->execute($key) or croak $sth->errstr;
     $sth->finish;
 
@@ -242,8 +284,9 @@ sub remove {
 sub clear {
     my ( $self, $key, ) = @_;
 
-    my $sth = $self->dbh->prepare_cached( $self->sql_strings->{clear} )
-      or croak $self->dbh->errstr;
+    my $dbh = $self->dbh->();
+    my $sth = $dbh->prepare_cached( $self->sql_strings->{clear} )
+      or croak $dbh->errstr;
     $sth->execute() or croak $sth->errstr;
     $sth->finish();
 
@@ -257,7 +300,7 @@ sub clear {
 sub get_keys {
     my ( $self, ) = @_;
 
-    my $dbh = $self->has_dbh_ro ? $self->dbh_ro : $self->dbh;
+    my $dbh = $self->has_dbh_ro ? $self->dbh_ro->() : $self->dbh->();
     my $sth = $dbh->prepare_cached( $self->sql_strings->{get_keys} )
       or croak $dbh->errstr;
     $sth->execute() or croak $sth->errstr;
