@@ -1,0 +1,5 @@
+#!perl -w
+use strict;
+use warnings;
+use CHI::Driver::DBI::t::CHIDriverTests::SQLite;
+CHI::Driver::DBI::t::CHIDriverTests::SQLite->runtests;
