@@ -1,5 +1,0 @@
-#!perl -w
-use strict;
-use warnings;
-use CHI::Driver::DBI::t::BackCompat;
-CHI::Driver::DBI::t::BackCompat->runtests;
