@@ -1,5 +1,0 @@
-#!perl -w
-use strict;
-use warnings;
-use CHI::Driver::DBI::t::SQLite;
-CHI::Driver::DBI::t::SQLite->runtests;
