@@ -4,6 +4,8 @@ Revision history for CHI-Driver-DBI
 
 1.22  May 14, 2010
 
+- Allow DBIx::Connection or database handle generators to be passed for dbh and dbh_ro
+
 1.21  May 14, 2010
 
 - Move source to github
